--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "@angular/service-worker": "^14.2.0",
     "angular-cli-ghpages": "^1.0.3",
+    "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
